Fixed the faster page load and maybe some overflow issue mark experienced on his phone

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    overflow-y: scroll; /* Enables vertical scrolling */
+    overflow-y: visible;
     overflow-x: hidden;
 }
 
